...
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Uqm-hH-cdp" id="ntq-NC-zsD">
                                            <rect key="frame" x="0.0" y="0.0" width="390" height="140"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="29v-cN-g3i">
                                                    <rect key="frame" x="30" y="31" width="330" height="0.0"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="SchoolCity" label="SchoolCity"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GD2-tQ-N63">
                                                    <rect key="frame" x="30" y="21" width="330" height="0.0"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="SchoolTittle" label="SchoolTittle"/>
                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GSn-MT-VEW">
                                                    <rect key="frame" x="30" y="41" width="330" height="0.0"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BKk-DI-Tzn">
                                <rect key="frame" x="134" y="451.33333333333326" width="122" height="342.66666666666674"/>
                                <color key="tintColor" systemColor="systemCyanColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="SATs Results"/>
                                <connections>
                                    <action selector="getSatsResultsButtonTapped:" destination="bHG-J4-kcc" eventType="touchUpInside" id="U28-0D-9Bb"/>
                                    <segue destination="ree-tS-7uF" kind="presentation" id="4NQ-hI-cAa"/>
                                </connections>
                            </button>
                        </subviews>
...
                            <constraint firstItem="mks-Xk-Rt2" firstAttribute="leading" secondItem="NZn-Ww-Kfi" secondAttribute="leading" constant="16" id="qeq-EC-cwz"/>
                            <constraint firstItem="YLY-4i-OHk" firstAttribute="top" secondItem="mks-Xk-Rt2" secondAttribute="bottom" constant="24" id="sni-KQ-2ZM"/>
                            <constraint firstItem="DaY-0b-ahV" firstAttribute="leading" secondItem="NZn-Ww-Kfi" secondAttribute="leading" constant="16" id="yeJ-qu-rn6"/>
                            <constraint firstItem="NZn-Ww-Kfi" firstAttribute="bottom" secondItem="BKk-DI-Tzn" secondAttribute="bottom" constant="16" id="zIA-FD-mj3"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="NYC Schools" id="6iu-6o-elW"/>
                    <connections>
                        <outlet property="label1" destination="0fn-Gq-29q" id="hmv-LB-Bgq"/>
                        <outlet property="label2" destination="mks-Xk-Rt2" id="IX2-th-od5"/>
                        <outlet property="label3" destination="YLY-4i-OHk" id="hh6-6x-uTa"/>
                        <outlet property="label4" destination="DaY-0b-ahV" id="nKB-zd-Z0c"/>
                        <outlet property="label5" destination="frz-lg-92C" id="vLf-dq-pO9"/>
...
