...


extension NYCSchool {
    
    static var mockedSchoolResponse = [NYCSchool(dbn: "02M260", school_name: "Clinton School Writers & Artists, M.S. 260", boro: "M", overview_paragraph: "Students who are prepared for college must have an education that encourages them to take risks as they produce and perform. Our college preparatory curriculum develops writers and has built a tight-knit community. Our school develops students w

        NYCSchool(dbn: "21K728", school_name: "Liberation Diploma Plus High School", boro: "K", overview_paragraph: "The mission of Liberation Diploma Plus High School, in partnership with CAMBA, is to develop the student academically, socially, and emotionally. We will equip students with the skills needed to evaluate their options so that they can make informed and appropriate choices and create

        NYCSchool(dbn: "08X282", school_name: "Women's Academy of Excellence", boro: "X", overview_paragraph: "The WomenÂ’s Academy of Excellence is an all-girls public high school, serving grades 9-12. Our mission is to create a community of lifelong learners, to nurture the intellectual curiosity and creativity of young women and to address their developmental needs. The school community cultiva

}



